Updated the 'MMQ 2-site' model description in the manual.
The R2_DQ = R2_ZQ = R20 assumption is now explained.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -914,6 +914,7 @@ where $2\delta$ is the spacing between successive 180$^\circ$ pulses and where
 \end{align}
 \end{subequations}
 
+For the model it is assumed that $\RtwoDQA = \RtwoZQA = \RtwozeroA$ and $\RtwoDQB = \RtwoZQB = \RtwozeroB$.
 The references for this model are:
 \begin{itemize}
 \item \bibentry{Korzhnev04a}
