--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -54,8 +54,8 @@ MMQ (SQ, ZQ, DQ, \& MQ) CPMG-type \\
 \cmidrule(lr){1-1}
 MQ CR72                     & \no  & \yes & \no  & \no  & \yes & \no  & ?    & \no  & \yes \\
 NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
-NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \no  \\
-NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \no  \\
+NS 3-site linear            & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
+NS 3-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
 
 \vspace{-5pt} \\
 $\Ronerho$-type \\
