--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -162,7 +162,11 @@
 \newcommand{\nucpmg}{\nu_\textrm{CPMG}}
 \newcommand{\omegaA}{\omega_\textrm{A}}
 \newcommand{\omegaB}{\omega_\textrm{B}}
+\newcommand{\omegaC}{\omega_\textrm{C}}
 \newcommand{\omegae}{\omega_\textrm{e}}
+\newcommand{\omegaHA}{\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{A}}
+\newcommand{\omegaHB}{\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{B}}
+\newcommand{\omegaHC}{\omega^{\scriptscriptstyle\mathrm{H}}_\textrm{C}}
 \newcommand{\omegaone}{\omega_1}
 \newcommand{\omegarf}{\omega_\textrm{rf}}
 \newcommand{\pone}{p_\textrm{1}}
@@ -186,8 +190,10 @@
 \newcommand{\RtwozeroMQ}{\mathrm{R}_\mathrm{2,MQ}^0}
 \newcommand{\RtwoDQA}{\mathrm{R}_\mathrm{2,DQ}^\mathrm{A}}
 \newcommand{\RtwoDQB}{\mathrm{R}_\mathrm{2,DQ}^\mathrm{B}}
+\newcommand{\RtwoDQC}{\mathrm{R}_\mathrm{2,DQ}^\mathrm{C}}
 \newcommand{\RtwoZQA}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{A}}
 \newcommand{\RtwoZQB}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{B}}
+\newcommand{\RtwoZQC}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{C}}
 \newcommand{\tex}{\tau_\textrm{ex}}
 \newcommand{\taucpmg}{\tau_\textrm{CPMG}}
 
