--- a/docs/latex/dispersion_models.tex
+++ b/docs/latex/dispersion_models.tex
@@ -56,10 +56,10 @@ MMQ CPMG-type \\
 \\[-5pt]
 MQ CR72                  & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev04a} \\
 MMQ 2-site               & Numeric  & 2     & $\{\Rtwozero, \dots, \pA, \dw, \dwH, \kex\}$        & $\pA > \pB$                       & \citet{Korzhnev05} \\
-MMQ 3-site (linear)\footnotemark[1]      & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwAC,$       & $\pA > \pB$ and $\pA > \pC$       & \citet{Korzhnev05} \\
-                         &          &       & $\dwHAB, \dwHAC, \kexAB, \kexAC\}$ \\
-MMQ 3-site (branched)\footnotemark[1]    & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwAC$        & $\pA > \pB$ and $\pA > \pC$       & \citet{Korzhnev05} \\
-                         &          &       & $, \dwHAB, \dwHAC, \dwHBC, \kexAB, \kexAC, \kexBC\}$ \\
+MMQ 3-site linear        & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwBC,$       & $\pA > \pB$ and $\pB > \pC$       & \citet{Korzhnev05} \\
+                         &          &       & $\dwHAB, \dwHBC, \kexAB, \kexBC\}$ \\
+MMQ 3-site               & Numeric  & 3     & $\{\Rtwozero, \dots, \pA, \pB, \dwAB, \dwBC$        & $\pA > \pB$ and $\pB > \pC$       & \citet{Korzhnev05} \\
+                         &          &       & $, \dwHAB, \dwHBC, \dwHBC, \kexAB, \kexBC, \kexAC\}$ \\
 
 % R1rho-type models.
 \\[-5pt]
